[tool.poetry]
name = "threatpulse"
version = "0.1.0"
description = ""
authors = ["Nightlyside"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.6.0"
requests = "^2.31.0"
brotli = "^1.1.0"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"
fastapi = "^0.104.1"
uvicorn = {extras = ["all"], version = "^0.23.2"}

[tool.poetry.scripts]
threatpulse = "threatpulse:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
