[tool.poetry]
name = "threatpulse"
version = "0.1.0"
description = ""
authors = ["Nightlyside"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
rich = "^13.6.0"
requests = "^2.31.0"
brotli = "^1.1.0"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"
fastapi = "^0.104.1"
uvicorn = {extras = ["all"], version = "^0.23.2"}
nltk = "^3.8.1"
rake-nltk = "^1.0.6"
ipykernel = "^6.26.0"
numpy = "^1.26.1"
attackcti = "^0.4.0"
click = ">=7.1.2,<9.0"
d8s-strings = ">=0.5.0,<1.0"
ioc-fanger = ">=3.0,<4.0"
joblib = "^1.3.2"
pandas = "^2.1.2"
pyparsing = "3.0.7"
scikit-learn = "^1.3.2"
trafilatura = "^1.6.2"
spacy = "^3.7.2"

[tool.poetry.scripts]
threatpulse = "threatpulse:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
